--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,6 @@
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.1
-bcrypt==5.0.0
 click==8.3.1
 colorama==0.4.6
 ecdsa==0.19.1
@@ -24,3 +23,5 @@ starlette==0.52.1
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 uvicorn==0.41.0
+httpx==0.28.1
+pytest==8.4.2
